--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,22 +1,22 @@
 {
     "material-icon-theme.activeIconPack": "nest",
     "workbench.colorCustomizations": {
-        "activityBar.activeBackground": "#167088",
-        "activityBar.background": "#167088",
+        "activityBar.activeBackground": "#009caa",
+        "activityBar.background": "#009caa",
         "activityBar.foreground": "#e7e7e7",
         "activityBar.inactiveForeground": "#e7e7e799",
-        "activityBarBadge.background": "#e976d1",
-        "activityBarBadge.foreground": "#15202b",
+        "activityBarBadge.background": "#9f0092",
+        "activityBarBadge.foreground": "#e7e7e7",
         "commandCenter.border": "#e7e7e799",
-        "sash.hoverBorder": "#167088",
-        "statusBar.background": "#0f4c5c",
+        "sash.hoverBorder": "#009caa",
+        "statusBar.background": "#006d77",
         "statusBar.foreground": "#e7e7e7",
-        "statusBarItem.hoverBackground": "#167088",
-        "statusBarItem.remoteBackground": "#0f4c5c",
+        "statusBarItem.hoverBackground": "#009caa",
+        "statusBarItem.remoteBackground": "#006d77",
         "statusBarItem.remoteForeground": "#e7e7e7",
-        "titleBar.activeBackground": "#0f4c5c",
+        "titleBar.activeBackground": "#006d77",
         "titleBar.activeForeground": "#e7e7e7",
-        "titleBar.inactiveBackground": "#0f4c5c99",
+        "titleBar.inactiveBackground": "#006d7799",
         "titleBar.inactiveForeground": "#e7e7e799"
     },
     "peacock.color": "#006d77"
