--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,11 @@
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
+    "paths": {
+      "@interfaces/*": ["types/interfaces/*"],
+      "@enum/*": ["types/enum/*"],
+      "@schemas/*": ["schemas/*"]
+    },
     "incremental": true,
     "skipLibCheck": true,
     "strictNullChecks": false,
