--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,4 +1,12 @@
 {
   "extends": "./tsconfig.json",
-  "exclude": ["node_modules", "test", "dist", "**/*spec.ts"]
+  "exclude": ["node_modules", "test", "dist", "**/*spec.ts"],
+  "compilerOptions": {
+    "baseUrl": "./",
+    "paths": {
+      "@interfaces/*": ["types/interfaces/*"],
+      "@enum/*": ["types/enum/*"],
+      "@schemas/*": ["schemas/*"]
+    }
+  }
 }
